Suppress mockito warning